objects/Approval_Job_Task__c/Approval_Job_Task__c.object-meta.xml
<CustomObject>
    <label>Approval Step</label>
    <nameField>
        <label>Approval Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>