objects/Approval_Job_Task__c/fields/Approver_By__c.field-meta.xml
<CustomField>
    <fullName>Approver_By__c</fullName>
    <label>Approved By</label>
    <length>75</length>
    <type>Text</type>
</CustomField>