objects/Approval_Job_Task__c/fields/Aprroval_Step__c.field-meta.xml
<CustomField>
    <fullName>Aprroval_Step__c</fullName>
    <formula>Name +&apos; (#&apos;+ TEXT(Task_Order__c)+&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aprroval Step #</label>
    <type>Text</type>
</CustomField>