objects/Approval_Job_Task__c/fields/Assigned_Users__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Users__c</fullName>
    <label>Assigned Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>