objects/Approval_Job_Task__c/fields/Created_From_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Job_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Job Task</label>
    <type>Checkbox</type>
</CustomField>