objects/Approval_Job_Task__c/fields/File_ID__c.field-meta.xml
<CustomField>
    <fullName>File_ID__c</fullName>
    <description>This field is used to store File related ContentDocument Id</description>
    <label>ContentDocument Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>