objects/Approval_Job_Task__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipName>Job_Approval_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>