objects/Approval_Job_Task__c/fields/Job_Name_and_Num__c.field-meta.xml
<CustomField>
    <fullName>Job_Name_and_Num__c</fullName>
    <label>Job Name and Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>