objects/Approval_Job_Task__c/fields/Job_Name_Num__c.field-meta.xml
<CustomField>
    <fullName>Job_Name_Num__c</fullName>
    <formula>IF( Created_From_Job_Task__c ,  Task__r.Job__r.Name +&apos; (# &apos;+Task__r.Job__r.Job_Auto_Number__c +&apos;)&apos;,  Project__r.Name +&apos; (# &apos;+ Project__r.Job_Auto_Number__c +&apos;)&apos; )</formula>
    <label>Job Name Num</label>
    <type>Text</type>
</CustomField>