objects/Approval_Job_Task__c/fields/Job_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Record_Id__c</fullName>
    <formula>Task__r.Job__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Record Id</label>
    <type>Text</type>
</CustomField>