objects/Approval_Job_Task__c/fields/Next_Task_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Task Due</label>
    <type>Checkbox</type>
</CustomField>