objects/Approval_Job_Task__c/fields/Number_of_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Submissions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subs-Resubs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>