objects/Approval_Job_Task__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Approval Steps</relationshipLabel>
    <relationshipName>Approval_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>