objects/Approval_Job_Task__c/fields/Schedule_Roles__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Roles__c</fullName>
    <label>Schedule Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Art Director</fullName>
            </value>
            <value>
                <fullName>Art Manager</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Client Contact</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Design Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Team</fullName>
            </value>
            <value>
                <fullName>Production Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>SVP, Sales &amp; Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>