objects/Approval_Job_Task__c/fields/Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Email__c</fullName>
    <description>It stores Submitter Email address</description>
    <label>Submitter Email</label>
    <type>Email</type>
</CustomField>