objects/Approval_Job_Task__c/fields/Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Name__c</fullName>
    <label>Submitter Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>