objects/Approval_Job_Task__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Job_Task__c</referenceTo>
    <relationshipLabel>Approval Steps</relationshipLabel>
    <relationshipName>Job_Approval_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>