objects/Approval_Job_Task__c/fields/Task_Order__c.field-meta.xml
<CustomField>
    <fullName>Task_Order__c</fullName>
    <label>Step Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>