objects/Approval_Job_Task__c/fields/Undo__c.field-meta.xml
<CustomField>
    <fullName>Undo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for undo action</description>
    <label>Undo</label>
    <type>Checkbox</type>
</CustomField>