objects/Approval_Job_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Name_Num__c</columns>
    <columns>NAME</columns>
    <columns>Aprroval_Step__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Assigned_Users__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Users__c</field>
        <operation>equals</operation>
        <value>Steve Harris</value>
    </filters>
    <label>All</label>
</ListView>